# forge

./: .gitignore  LICENSE
case/01.cavity/run_smac_gpu/: animate_shock_tube_solution.py  list.txt
case/03.cavity_density/mesh/: cavity.geo
case/03.cavity_density/run_keep/: bcondConfig.yaml  log  solverConfig.yaml
case/03.cavity_density/run_roe/: bcondConfig.yaml  bcondConfig.yaml.bk  log  solverConfig.yaml
case/04.laval_nozzle/mesh/: laval_nozzle.geo  laval_nozzle2.geo  laval_nozzle3.geo  laval_nozzle4.geo
case/04.laval_nozzle/run4/: bcondConfig.yaml  solverConfig.yaml
case/04.laval_nozzle/run_slau/: bcondConfig.yaml  bcondConfig.yaml.bk  solverConfig.yaml
case/05.sod_shock_tube/mesh/: 1D_shock_tube.geo  cavity.geo.opt
case/05.sod_shock_tube/run_ausm/: solverConfig.yaml
case/05.sod_shock_tube/run_ausm+UP/: solverConfig.yaml
case/05.sod_shock_tube/run_keep/: solverConfig.yaml
case/05.sod_shock_tube/run_keep_fvs/: solverConfig.yaml
case/05.sod_shock_tube/run_keep_slau/: bcondConfig.yaml  solverConfig.yaml
case/05.sod_shock_tube/run_roe/: .solverConfig.yaml.swp  log  solverConfig.yaml
case/05.sod_shock_tube/run_roe_dual/: solverConfig.yaml
case/05.sod_shock_tube/run_slau/: log  solverConfig.yaml
case/06.mach3_wind_tunnel/mesh/: mach3.geo  mach3_hr.geo
case/06.mach3_wind_tunnel/run_KEEP_FVS/: solverConfig.yaml
case/06.mach3_wind_tunnel/run_ausm/: bcondConfig.yaml  solverConfig.yaml
case/06.mach3_wind_tunnel/run_ausm+/: solverConfig.yaml
case/06.mach3_wind_tunnel/run_ausm+UP/: solverConfig.yaml
case/06.mach3_wind_tunnel/run_keep/: bcondConfig.yaml  solverConfig.yaml
case/06.mach3_wind_tunnel/run_keep_slau/: bcondConfig.yaml  solverConfig.yaml  test  test.cu  test.pvsm
case/06.mach3_wind_tunnel/run_roe/: bcondConfig.yaml  solverConfig.yaml
case/06.mach3_wind_tunnel/run_slau/: solverConfig.yaml
case/06.mach3_wind_tunnel/run_slau_gpu/: solverConfig.yaml
case/07.sod_shock_tube_3D/mesh/: 3D_shock_tube.geo
case/07.sod_shock_tube_3D/run_keep/: log  solverConfig.yaml
case/07.sod_shock_tube_3D/run_roe/: bcondConfig.yaml  solverConfig.yaml
case/08.bump/mesh/: bump.geo  bump.geo.opt  bump_4pct.geo  bump_unst.geo
case/08.bump/run_AUSM+/: solverConfig.yaml
case/08.bump/run_AUSM+_mach1.65_4pctHt/: bcondConfig.yaml  solverConfig.yaml
case/08.bump/run_ausm/: solverConfig.yaml
case/08.bump/run_ausm+UP/: solverConfig.yaml
case/08.bump/run_keep/: bcondConfig.yaml  solverConfig.yaml
case/08.bump/run_roe/: solverConfig.yaml
case/08.bump/run_roe_mach0.675/: bcondConfig.yaml  solverConfig.yaml
case/08.bump/run_roe_mach1.65_4pctHt/: solverConfig.yaml
case/08.bump/run_slau/: log  solverConfig.yaml
case/08.bump/run_slau_mach1.65_4pctHt/: bcondConfig.yaml  solverConfig.yaml
case/09.Taylor-Green/: plot_taylorGreen.py
case/09.Taylor-Green/mesh/: Taylor-Green.geo
case/09.Taylor-Green/run_ausm/: log
case/09.Taylor-Green/run_keep/: .solverConfig.yaml.swp  Qcriterion.pvsm  bcondConfig.yaml_perio  plot_taylorGreen.py  solverConfig.yaml
case/09.Taylor-Green/run_keep_M0.1/: Qcriterion.pvsm  bcondConfig.yaml.bk  check.pvsm  log_4th_fixDT  plot_taylorGreen.py  solverConfig.yaml
case/10.half_sphere/mesh/: half_sphere.geo
case/10.half_sphere/run_ausm/: compare_shima.pvsm  solverConfig.yaml
case/10.half_sphere/run_ausm+UP/: Qcriterion.pvsm  bcondConfig.yaml  solverConfig.yaml
case/10.half_sphere/run_roe/: solverConfig.yaml
case/10.half_sphere/run_slau/: compare_shima.pvsm  solverConfig.yaml
case/11.Taylor-Green_prism/: plot_taylorGreen.py
case/11.Taylor-Green_prism/mesh/: Taylor-Green_prism.geo
case/17.flared_cone/: bl_forge.ods  bl_forge_x=0.05.ods
post_tool/animate/: animate_png.py
post_tool/shock_tube/: animate_shock_tube_solution.py  plot_shock_tube_solution.py  plot_shock_tube_solution2.py  shock_tube_analytical_solution.py  test.py
solver_density_cuda/: CMakeLists.txt  boundaryCond.cpp  boundaryCond.hpp  calcDistance_poisson.cpp  convectiveFlux.cpp  convectiveFlux.hpp  dependentVariables.cpp  dependentVariables.hpp  flowFormat.hpp  gradient.cpp  gradient.hpp  main.cpp  setDT.cpp  setDT.hpp  setStructualVariables.cpp  setStructualVariables.hpp  timeIntegration.cpp  timeIntegration.hpp  update.cpp  update.hpp  variables.cpp  variables.hpp
solver_density_cuda.bk/: CMakeLists.txt  boundaryCond.hpp  convectiveFlux.hpp  dependentVariables.hpp  flowFormat.hpp  implicitCorrection.cpp  implicitCorrection.hpp  main.cpp  setDT.cpp  setDT.hpp  solveNavierStokes.cpp  solveNavierStokes.hpp  update.hpp
solver_density_cuda.bk/input/: setInitial.hpp
solver_density_cuda.bk/mesh/: convertGmshToNagare.cpp  gmshReader.hpp
solver_density_cuda/cuda_forge/: AUSM_d.cu  AUSM_d.cuh  CMakeLists.txt  atomic.cuh  boundaryCond_d.cu  boundaryCond_d.cuh  calcGradient_d.cu  calcGradient_d.cuh  calcLimiter_d.cu  calcLimiter_d.cuh  calcStructualVariables_d.cu  calcStructualVariables_d.cuh  convectiveFlux_d.bk.cu  convectiveFlux_d.bk2.cu  convectiveFlux_d.cu  convectiveFlux_d.cu.old  convectiveFlux_d.cuh  convectiveFlux_d_noGhost.cu  cudaConfig.cuh  cudaWrapper.cu  cudaWrapper.cuh  dependentVariables_d.cu  dependentVariables_d.cuh  derived_atomic_functions.cuh  device_functions.h  ducrosSensor_d.cu  ducrosSensor_d.cuh  fluct_variables_d.cu  fluct_variables_d.cuh  gasProperties_d.cu  gasProperties_d.cuh  implicitCorrection_d.cu  implicitCorrection_d.cuh  interpVelocity_c2p_d.cuh  limiter_d.cu  limiter_d.cuh  setDT_d.cu  setDT_d.cuh  timeIntegration_d.cu  timeIntegration_d.cuh  (+7 more)
solver_density_cuda/cuda_nagare/: CMakeLists.txt  cudaConfig.cuh  cudaWrapper.cu
solver_density_cuda/input/: calcWallDistance_kdtree.cpp  calcWallDistance_kdtree.hpp  setInitial.hpp  solverConfig.cpp  solverConfig.hpp
solver_density_cuda/mesh/: convertGmshToForge.cpp  gmshReader.hpp  mesh.cpp  mesh.hpp  mesh_partition.cpp
solver_density_cuda/output/: h5handler.hpp  output.cpp  output.hpp
solver_density_cuda/probe/: CMakeLists.txt  point_probes.cpp  point_probes.cu  point_probes.cuh  point_probes.hpp
solver_smac_cuda/: CMakeLists.txt
(+131 files in other folders)
